# coding_challenge_testing

./: .gitignore  CODING_CHALLENGE_README.md  README.md  main.py  pyproject.toml  ruff.toml
raw_data/: ARC_Intelligence_Profile.txt
src/rag/cli/: main.py
src/rag/core/: agent.py  answer.py  chunker.py  embedder.py  loader.py  retriever.py
tests/: test_cli_module.py  test_retriever.py  test_script_chat.py
