[project]
name = "arc-rag-cli"
version = "0.1.0"
description = "Simple RAG CLI over local text file"
authors = [
    {name = "ARC",email = "dev@arc.local"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "click (>=8.3.0,<9.0.0)",
    "rich (>=14.1.0,<15.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "ruff (>=0.13.2,<0.14.0)",
    "black (>=25.9.0,<26.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)"
]
